feat: media upload, OAuth external connections, onboarding media/goals, welcome screen
Backend (mvpconnect-svc):
- Add media upload pipeline: POST /media/uploads (presigned S3/MinIO URL),
  PUT to storage, POST /media/{id}/complete, step media association
- Add MediaService, MediaCleanupService, MediaAssetRepository with
  presigned URL generation, ownership validation, and ready-state promotion
- Add ExternalConnectionService, ExternalConnectionPersistenceService,
  OAuthConnectionService for YouTube and SoundCloud OAuth 2.0 connections
- Add ExternalConnectionController, ExternalOAuthController,
  ArtistIdentityController
- Add ExternalConnection, OAuthConnectionAttempt Neo4j nodes
- Add TokenEncryptionService for AES-GCM OAuth credential encryption at rest
- Add CorsProperties, ExternalOAuthConfig, OAuthReturnProperties,
  SoundCloudOAuthProperties, YouTubeOAuthProperties, TokenEncryptionProperties
- Add SoundCloudOAuthClient, YouTubeOAuthClient provider implementations
- Add ArtistIdentityService for Spotify artist identity linking
- Remove WebConfig (replaced by CorsProperties-driven SecurityConfig)
- Update SecurityConfig with CORS from CorsProperties
- Update application.properties: CORS origins, YouTube/SoundCloud OAuth,
  encryption key config, OAuth return allowed targets
- Update self-account and public profile responses with external connections,
  gallery images, and artist identity fields
- Update OnboardingService/OnboardingStepContractService for media step
  validation (banner, gallery, website URL)
- Update media step DTOs for all three personas
- Add MEDIA_CONNECTIONS.md, MEDIA_STORAGE.md design docs
- Add tests: ExternalConnectionServiceTest, OAuthConnectionServiceTest,
  ArtistIdentityServiceTest, MediaCleanupServiceTest,
  TokenEncryptionServiceTest, SoundCloudOAuthClientTest,
  YouTubeOAuthClientTest, and updated existing service tests

Frontend (mvpconnect-app):
- Add OnboardingRealMediaSession and OnboardingMediaForm for all three
  personas